2007-05-10  Luis Machado  <luisgpm@br.ibm.com>

	* rs6000-tdep.c: (deal_with_atomic_sequence) Stores branch
	instruction's opcode in the "opcode" variable and declares new
	variable "closing_insn".

2007-05-10  Chris Dearman  <chris@mips.com>
            Maciej W. Rozycki  <macro@mips.com>

	* cli/cli-setshow.c (do_setshow_command): Remove trailing
	whitespace when setting a var_filename.

2007-05-09  Bob Wilson  <bob.wilson@acm.org>
	
	* main.c (captured_main): Recognize -tui option and print an error
	message when the TUI is not configured.
	
2007-05-09  Andreas Schwab  <schwab@suse.de>

	* mipsnbsd-tdep.c (mipsnbsd_ilp32_fetch_link_map_offsets): Don't
	set removed members.
	(mipsnbsd_lp64_fetch_link_map_offsets): Likewise.

2007-05-08  Ulrich Weigand  <uweigand@de.ibm.com>

	* gdbarch.sh (deprecated_store_struct_return): Remove.
	* gdbarch.c, gdbarch.h: Regenerate.
	* frv-tdep.c (frv_store_struct_return): Remove.
	(frv_gdbarch_init): Do not install it.

2007-05-08  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/i386/nm-i386sol2.h (USE_PROC_FS): Do not define.
	* config/mips/nm-irix5.h (USE_PROC_FS): Do not define.
	* config/nm-linux.h (USE_PROC_FS): Do not undefine.

2007-05-08  Ulrich Weigand  <uweigand@de.ibm.com>

	* spu-linux-nat.c: Include "gdb_stdint.h".
	(fetch_ppc_register): Use uint64_t instead of unsigned long long.
	(fetch_ppc_memory_1, store_ppc_memory_1): Likewise.
	(fetch_ppc_memory, store_ppc_memory): Fix coding style.
	(spu_symbol_file_add_from_memory): Use strtoulst instead of sscanf.
	(spu_child_wait): Mark up string for translation.

2007-05-08  Paul Gilliam  <pgilliam@us.ibm.com>
	    Luis Machado  <luisgpm@br.ibm.com>

	* rs6000-tdep.c: (LWARX_MASK, LWARX_INSTRUCTION, LDARX_INSTRUCTION,
	STWCX_MASK, STWCX_INSTRUCTION, STDCX_INSTRUCTION, BC_MASK,
	BC_INSTRUCTION): Define.
	(deal_with_atomic_sequence): New function.
	(rs6000_software_single_step): Call deal_with_atomic_sequence.
	(rs6000_gdbarch_init): Install deal_with_atomic_sequence as